--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@
                                         <div class="columns_wrap">
                                             <div class="column_container column-1_1">
                                                 <div class="column-inner">
-                                                    <!--<div class="height_medium"></div>-->
+                                                    <div class="height_medium"></div>
                                                     <div class="sc_content sc_content_default main-title">
                                                         <!--<h6 class="sc_item_subtitle sc_content_subtitle sc_align_center sc_item_title_style_shadow">03</h6>-->
                                                         <h2 class="sc_item_title sc_content_title sc_align_center sc_item_title_style_shadow" style="color: #026232;">Piante</h2>
@@ -1186,7 +1186,7 @@
                                 </div>
                             </section>
 
-                            <section class="no-col-padding columns-stretch content-middle">
+                            <section class="no-col-padding full-height-section columns-stretch content-middle">
                                 <div class="container">
                                     <div class="row">
                                         <!--<a id="sc_anchor_new_complex_3" class="sc_anchor sc_anchor_default" title="Finiture" data-icon="icon-star-2" data-url="#new_complex_3"></a>-->
@@ -1283,7 +1283,7 @@
                                                             <div class="sc_align_center">
                                                                 Commercializzato da:<br/>
                                                                 <span class="trx_addons_dark">KOS S.R.L. Home Solution</span>
-                                                                <br/> Piazza Monumento<br/> Legnano, MI 20025<br/> Telefono: <span class="trx_addons_dark"><a href="tel:+1234567890" style="color: #026232;">123-456-7890</a> <br/></span> Email: <span class="trx_addons_dark"><a href="mailto:info@yoursite.com" style="color: #026232;">info@yoursite.com</a>
+                                                                <br/> Piazza Monumento<br/> Legnano, MI 20025<br/> Telefono: <span class="trx_addons_dark"><a href="tel:+1234567890" style="color: #026232;">123-456-7890</a> <br/></span> Email: <span class="trx_addons_dark"><a href="mailto:info@residenzachora.com" style="color: #026232;">info@residenzachora.com</a>
                                                                 </span>
                                                             </div>
                                                         </div>
@@ -1309,7 +1309,7 @@
                                                 <div class="column-inner ph20p">
                                                     <!--<div class="height_large"></div>-->
                                                     <div class="height_small"></div>
-                                                    <h3 class="trx_addons_no_margins sc_align_center titolo_colorato">Contattaci</h3>
+                                                    <h3 class="trx_addons_no_margins sc_align_center titolo_colorato_custom titolo_colorato">Contattaci</h3>
                                                     <div class="height_small"></div>
                                                     <div class="sc_content sc_content_default" style="padding-top: 0;">
                                                         <div class="sc_content_container">
@@ -1319,8 +1319,8 @@
                                                                         <div class="trx_addons_columns_wrap columns_padding_bottom"></div>
                                                                     </div>
                                                                     <div class="sc_form_fields">
-                                                                        <div class="trx_addons_columns_wrap">
-                                                                            <div class="sc_form_details trx_addons_column-1_2">
+                                                                        <div class="trx_addons_columns_wrap custom_wrap">
+                                                                            <div class="sc_form_details trx_addons_column-1_2 custom_form_left">
                                                                                 <label class="sc_form_field sc_form_field_name required">
 																			        <span class="sc_form_field_wrap">
 																				        <input type="text" name="name" id="contact_form_username" placeholder="Nome">
@@ -1337,7 +1337,7 @@
                                                                                     </span>
                                                                                 </label>
                                                                             </div>
-                                                                            <div class="sc_form_message trx_addons_column-1_2">
+                                                                            <div class="sc_form_message trx_addons_column-1_2 custom_form_right">
                                                                                 <label class="sc_form_field sc_form_field_name required">
                                                                                     <span class="sc_form_field_wrap">
                                                                                         <input type="text" name="cognome" id="contact_form_surname" placeholder="Cognome">
@@ -1372,7 +1372,7 @@
                                                                             </div>
                                                                         </div>
                                                                         <div class="sc_form_field sc_form_field_button">
-                                                                            <button class="submit-form">Prenota una visita</button>
+                                                                            <button class="submit-form button_custom">Prenota una visita</button>
                                                                         </div>
                                                                         <div class="trx_addons_message_box sc_form_result">
                                                                         </div>
