Risolve bug img_punti

--- a/index.html
+++ b/index.html
@@ -1231,7 +1231,7 @@
                                             <div class="column_container">
                                                 <div class="column-inner">
                                                     <div class="cqtooltip-wrapper hotspots-style-1 " data-opacity="1" data-tooltipanimation="grow" data-tooltipstyle="light" data-trigger="hover" data-maxwidth="240" data-marginoffset="" data-isdisplayall="off" data-displayednum="1">
-                                                        <img id="img-punti" src="images/Esterni_2/05.jpg"/>
+                                                        <img id="img_punti" src="images/Esterni_2/05.jpg"/>
                                                         <div class="cq-hotspots">
                                                             <div class="hotspot-item pulse-white" data-top="50%" data-left="55%">
                                                                 <a href="#" class="cq-tooltip" data-tooltip="&lt;span class=&quot;translation-chunk&quot; data-align=&quot;0:10&quot;&gt;PARAPETTO IN CRISTALLO&lt;/span&gt;" data-arrowposition="top">
