Cambia alcune cose
- aggiornato form
- aggiornata animazione logo iniziale

--- a/index.html
+++ b/index.html
@@ -53,20 +53,20 @@
                                                 </div>
 
                                                 <img class="tp-caption  slide_title main-img" data-x="center" data-top="40%" data-hoffset="" data-voffset="-20" data-width="['400']" data-height="['auto']" data-transform_idle="o:1;" data-transform_in="y:50px;opacity:0;s:500;e:Power2.easeOut;"
-                                                data-transform_out="opacity:0;s:300;" data-start="2400" data-splitin="none" data-splitout="none" data-responsive_offset="on" src="images/logo e colore/Residenza Chora Logo Bianco.png" style="width: 100px;">
+                                                data-transform_out="opacity:0;s:300;" data-start="1400" data-splitin="none" data-splitout="none" data-responsive_offset="on" src="images/logo e colore/Residenza Chora Logo Bianco.png" style="width: 100px;">
 
                                                 <h1 class="tp-caption   tp-resizeme  slide_title first-main-title" id="slide-1-layer-1" data-x="center" data-hoffset="" data-y="center" data-voffset="-20" data-width="['1024']" data-height="['auto']" data-transform_idle="o:1;" data-transform_in="y:50px;opacity:0;s:500;e:Power2.easeOut;"
-                                                    data-transform_out="opacity:0;s:300;" data-start="2400" data-splitin="none" data-splitout="none" data-responsive_offset="on">
+                                                    data-transform_out="opacity:0;s:300;" data-start="1400" data-splitin="none" data-splitout="none" data-responsive_offset="on">
                                                     SOLUZIONI ABITATIVE CHE SI MUOVONO NEL PRESENTE PER ESSERE GIà NEL FUTURO</h1>
 
                                                 <a href="tel:111111111"><div class="tp-caption rev-btn  tp-resizeme  theme_button slide_button green-btn" id="slide-1-layer-2" data-x="center" data-hoffset="" data-y="center" data-voffset="200" data-width="['auto']" data-height="['auto']" data-transform_idle="o:1;" data-transform_hover="o:1;rX:0;rY:0;rZ:0;z:0;s:0;e:Linear.easeNone;"
-                                                    data-style_hover="c:#88b04b;bg:rgba(255, 255, 255, 1.00);" data-transform_in="y:50px;opacity:0;s:500;e:Power2.easeOut;" data-transform_out="opacity:0;s:300;" data-start="2700" data-splitin="none"
+                                                    data-style_hover="c:#88b04b;bg:rgba(255, 255, 255, 1.00);" data-transform_in="y:50px;opacity:0;s:500;e:Power2.easeOut;" data-transform_out="opacity:0;s:300;" data-start="1700" data-splitin="none"
                                                     data-splitout="none" > Chiamaci Subito</div></a>
 
                                                     <!--data-actions='[{"event":"click","action":"simplelink","target":"_blank","url":"http:\/\/themeforest.net\/user\/themerex\/portfolio","delay":""}]' data-responsive_offset="on"-->
 
                                                 <div class="tp-caption   tp-resizeme  slide_scroll" id="slide-1-layer-3" data-x="center" data-hoffset="" data-y="bottom" data-voffset="40" data-width="['auto']" data-height="['auto']" data-transform_idle="o:1;" data-transform_in="opacity:0;s:500;e:Power2.easeOut;"
-                                                    data-transform_out="opacity:0;s:300;" data-start="3000" data-splitin="none" data-splitout="none" data-actions='[{"event":"click","action":"scrollbelow","offset":"px","delay":""}]' data-responsive_offset="on">
+                                                    data-transform_out="opacity:0;s:300;" data-start="2000" data-splitin="none" data-splitout="none" data-actions='[{"event":"click","action":"scrollbelow","offset":"px","delay":""}]' data-responsive_offset="on">
                                                     <div class="theme_scroll_down">Esplora</div>
                                                 </div>
                                             </li>
@@ -1333,7 +1333,7 @@
                                                                                 </label>
                                                                                 <label class="sc_form_field sc_form_field_name required">
                                                                                     <span class="sc_form_field_wrap">
-                                                                                        <input type="text" name="Comune" id="contact_form_city" placeholder="Comune">
+                                                                                        <input type="text" name="comune" id="contact_form_city" placeholder="Comune">
                                                                                     </span>
                                                                                 </label>
                                                                             </div>
@@ -1350,7 +1350,7 @@
 																		        </label>
                                                                                 <label class="sc_form_field sc_form_field_name required">
                                                                                     <span class="sc_form_field_wrap">
-                                                                                        <input type="text" name="Cap" id="contact_form_city_2" placeholder="Cap">
+                                                                                        <input type="text" name="cap" id="contact_form_city_2" placeholder="Cap">
                                                                                     </span>
                                                                                 </label>
                                                                             </div>
