Cambia logo sito
-Aggiunte due immagini, una delle quali è il nuovo logo del sito

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>CHORA &#8211; Appartamenti moderni in un nuovo complesso residenziale</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="icon" type="image/x-icon" href="images/logo e colore/A Chora Bianco.png" />
+    <link rel="icon" type="image/x-icon" href="images/logo e colore/A Chora Bianco Sfondo Verde Rounded.png" />
     <link rel="stylesheet" href="js/vendor/hotspot/css/style.min.css" type="text/css" media="all">
     <link rel="stylesheet" href="js/vendor/hotspot/css/tooltipster.css" type="text/css" media="all">
     <link rel="stylesheet" href="js/vendor/mediaelement/css/mediaelementplayer.css" type="text/css" media="all">
